k8s/kgateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelineiq-gateway
  namespace: pipelineiq
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: pipelineiq-gateway
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: pipelineiq-gateway
    gateway.networking.k8s.io/gateway-name: pipelineiq-gateway
    kgateway: kube-gateway
spec:
  type: LoadBalancer
  loadBalancerIP: 4.187.142.246
  selector:
    app.kubernetes.io/instance: pipelineiq-gateway
    app.kubernetes.io/name: pipelineiq-gateway
    gateway.networking.k8s.io/gateway-name: pipelineiq-gateway
  ports:
    - name: listener-80
      port: 80
      protocol: TCP
      targetPort: 80
