k8s/kgateway/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pipelineiq-frontend-route
  namespace: pipelineiq
spec:
  parentRefs:
    - name: pipelineiq-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
